bug squashing

--- a/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
+++ b/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
@@ -1,1 +1,5 @@
 /* ::ng-deep .mat-select-value, ::ng-deep .mat-option-text { text-align: right; } */
+
+.weaponName {
+    width: 150px
+}
