--- a/src/app/quick-view/quick-view-drawer.component.css
+++ b/src/app/quick-view/quick-view-drawer.component.css
@@ -189,6 +189,10 @@
     font-size: 17px;
 }
 
+.weaponName {
+    width: 150px;
+}
+
 .damage {
     position: absolute;
     z-index: 1;
